update survey